--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,21 @@
             <artifactId>struts2-core</artifactId>
             <version>${struts2.version}</version>
         </dependency>
+    
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.10.Final</version>
+        </dependency>
+    
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-c3p0</artifactId>
+            <version>5.4.8.Final</version>
+        </dependency>
+
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
