--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     
         <struts2.version>2.5.30</struts2.version>
         <log4j2.version>2.10.0</log4j2.version>
+        <spring.version>5.3.24</spring.version>
     </properties>
     
     <dependencies>
@@ -71,9 +72,36 @@
             <artifactId>hibernate-c3p0</artifactId>
             <version>5.4.10.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>5.3.24</version>
+        </dependency>
 
+        <!-- Spring web依赖 -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <!-- Spring整合ORM框架依赖 -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+
+        <!-- Struts2和Spring整合依赖 -->
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-spring-plugin</artifactId>
+            <version>${struts2.version}</version>
+        </dependency>
 
     </dependencies>
+
+
     <dependencyManagement>
         <dependencies>
             <dependency>
